CMS7-7129: Configure a more pragmatic default cargo jvm PermGen space and add repo.config path as commandline configurable system property as well